--- a/imgui.ini
+++ b/imgui.ini
@@ -9,17 +9,26 @@ Size=550,680
 Collapsed=0
 
 [Window][Control flow]
-Pos=112,10
-Size=178,81
-Collapsed=1
+Pos=342,692
+Size=303,173
+Collapsed=0
 
 [Window][Emulator]
-Pos=69,141
-Size=488,491
-Collapsed=1
+Pos=342,187
+Size=302,500
+Collapsed=0
 
 [Window][Memory]
-Pos=897,0
-Size=367,714
+Pos=6,7
+Size=327,1003
 Collapsed=1
+
+[Window][Emulator Setup]
+Pos=341,8
+Size=304,174
+Collapsed=0
+
+[Table][0x44C6C09B,2]
+Column 0  Weight=0.3274
+Column 1  Weight=1.6726
 
